Fixing form overflow

--- a/public/stylesheets/form.css
+++ b/public/stylesheets/form.css
@@ -1,5 +1,5 @@
 section {
-    height: 100%;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
