--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -25,7 +25,7 @@ html {
 }
 
 body {
-  height: 100%;
+  min-height: 100%;
   margin: 0;
   padding: 0;
   color: black;
@@ -35,7 +35,7 @@ body {
 }
 
 main {
-  height: 100%;
+  min-height: 100%;
   padding-bottom: 5rem;
 }
 
